--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- fontawsome -->
+    <script src="https://kit.fontawesome.com/1963a4b7d0.js" crossorigin="anonymous"></script>
+
+    <!-- css -->
+    <link rel="stylesheet" href="css/style.css">
+
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- header start -->
+    <header class="header">
+        <nav class="nav">
+            <h3 class="logo">Influencer products</h3>
+            <div class="navigation">
+                <ul class="navigation">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Log in</a></li>
+                    <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+                <p class="search-icon"></p>
+                <p class="cart-icon"></p>
+            </div>
+        </nav>
+        <div class="banner">
+            <section class="banner-content">
+                <h3 class="title">Start your Journey as Influencer</h3>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn">Prebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </section>
+        </div>
+    </header>
+    <!-- header end -->
+
+    <!-- main start -->
+    <main class="main">
+
+    </main>
+    <!-- main end -->
 </body>
 </html>
