--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
             <section class="banner-content">
                 <h3 class="title">Start your Journey as Influencer</h3>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                <button class="btn">Prebook now <i class="fa-solid fa-arrow-right"></i></button>
+                <button class="btn">
+                    <p>Prebook now</p>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
             </section>
+            <div class="banner-image">
+                <img src="images/main-camera.png" alt="">
+            </div>
         </div>
     </header>
     <!-- header end -->
