header mobile responsive done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- header start -->
     <header class="header">
         <nav class="nav">
+            <div class="menu"><i class="fa-solid fa-bars"></i></div>
             <h3 class="logo">Influencer products</h3>
             <div class="navigation">
                 <ul class="navigation">
@@ -26,8 +27,6 @@
                     <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
                     <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
-                <p class="search-icon"></p>
-                <p class="cart-icon"></p>
             </div>
         </nav>
         <div class="banner">
