brands large and small device done

--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
     <!-- main start -->
     <main class="main">
 
+        <section class="brands">
+            <ul>
+                <li class="alibaba"><img src="images/logos/Alibaba.svg" alt=""></li>
+                <li class="amazon"><img src="images/logos/Amazon.svg" alt=""></li>
+                <li class="daraz"><img src="images/logos/Daraz.pk Logo.svg" alt=""></li>
+                <li class="ebay"><img src="images/logos/Ebay.svg" alt=""></li>
+                <li class="rakuten"><img src="images/logos/Rakuten.svg" alt=""></li>
+                <li class="target"><img src="images/logos/Target.svg" alt=""></li>
+                <li class="walmart"><img src="images/logos/Walmart.svg" alt=""></li>
+            </ul>
+        </section>
     </main>
     <!-- main end -->
 </body>
