popular collection large and small device done

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <!-- main start -->
     <main class="main">
 
+        <!-- brands start -->
         <section class="brands">
             <ul>
                 <li class="alibaba"><img src="images/logos/Alibaba.svg" alt=""></li>
@@ -59,6 +60,164 @@
                 <li class="walmart"><img src="images/logos/Walmart.svg" alt=""></li>
             </ul>
         </section>
+        <!-- brands start -->
+
+        <!-- Popular collection start -->
+        <section class="popular-collection">
+
+            <h2 class="title">Popular Collection</h2>
+
+            <div class="collections">
+
+                <article class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3 class="product-name">Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </p>
+                        <p>4.5</p>
+                    </div>
+                    <p class="availability">Wordwide shifting available Buyers protection possible!</p>
+                </article>
+                <article class="product">
+                    <img src="images/mic.png" alt="">
+                    <h3 class="product-name">microphone</h3>
+                    <p class="price">$120.25</p>
+                    <div class="rating">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </p>
+                        <p>4.5</p>
+                    </div>
+                    <p class="availability">Wordwide shifting available Buyers protection possible!</p>
+                </article>
+                <article class="product">
+                    <img src="images/airpod.png" alt="">
+                    <h3 class="product-name">Airbuds</h3>
+                    <p class="price">$100.00</p>
+                    <div class="rating">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </p>
+                        <p>4.5</p>
+                    </div>
+                    <p class="availability">Wordwide shifting available Buyers protection possible!</p>
+                </article>
+                <article class="product">
+                    <img src="images/drone.png" alt="">
+                    <h3 class="product-name">Drone</h3>
+                    <p class="price">$980.25</p>
+                    <div class="rating">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </p>
+                        <p>4.5</p>
+                    </div>
+                    <p class="availability">Wordwide shifting available Buyers protection possible!</p>
+                </article>
+                <article class="product">
+                    <img src="images/setup.png" alt="">
+                    <h3 class="product-name">Light Setup</h3>
+                    <p class="price">$1200.00</p>
+                    <div class="rating">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </p>
+                        <p>4.5</p>
+                    </div>
+                    <p class="availability">Wordwide shifting available Buyers protection possible!</p>
+                </article>
+                <article class="product">
+                    <img src="images/lights.png" alt="">
+                    <h3 class="product-name">Photoshoot set</h3>
+                    <p class="price">$820.40</p>
+                    <div class="rating">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </p>
+                        <p>4.5</p>
+                    </div>
+                    <p class="availability">Wordwide shifting available Buyers protection possible!</p>
+                </article>
+                <article class="product">
+                    <img src="images/camera.png" alt="">
+                    <h3 class="product-name">Vlogging Camera</h3>
+                    <p class="price">$1800.80</p>
+                    <div class="rating">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </p>
+                        <p>4.5</p>
+                    </div>
+                    <p class="availability">Wordwide shifting available Buyers protection possible!</p>
+                </article>
+                <article class="product">
+                    <img src="images/single-light.png" alt="">
+                    <h3 class="product-name">Green Screen</h3>
+                    <p class="price">$25.48</p>
+                    <div class="rating">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </p>
+                        <p>4.5</p>
+                    </div>
+                    <p class="availability">Wordwide shifting available Buyers protection possible!</p>
+                </article>
+                <article class="product">
+                    <img src="images/action.png" alt="">
+                    <h3 class="product-name">Action Camera</h3>
+                    <p class="price">$380.00</p>
+                    <div class="rating">
+                        <p>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </p>
+                        <p>4.5</p>
+                    </div>
+                    <p class="availability">Wordwide shifting available Buyers protection possible!</p>
+                </article>
+                
+
+            </div>
+        </section>
+        <!-- Popular collection end -->
     </main>
     <!-- main end -->
 </body>
