--- a/index.html
+++ b/index.html
@@ -213,12 +213,45 @@
                     </div>
                     <p class="availability">Wordwide shifting available Buyers protection possible!</p>
                 </article>
-                
-
             </div>
+            <div class="see-more"><a href="">See More <i class="fa-solid fa-arrow-right"></i></a></div>
         </section>
         <!-- Popular collection end -->
+
+        <!-- Featured start -->
+        <section class="featured">
+            <img src="images/gear.png" alt="">
+            <article class="description">
+                <h2 class="title">Featured products at one place</h2>
+                <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn">
+                    <p>Join Now</p>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+            </article>
+        </section>
+        <!-- Featured end -->
     </main>
     <!-- main end -->
+
+
+
+    <!-- Footer start -->
+    <footer class="footer">
+        <section class="content">
+            <h3 class="headline">Influencer products</h3>
+            <div class="copyright">
+                <p>Copyright © 2020  influencer products</p>
+                <p>All rights reserved</p>
+                <div class="media">
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-square-twitter"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+            </div>
+        </section>
+    </footer>
+    <!-- Footer end -->
 </body>
 </html>
